--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Www</h1>
-      <h2 class="project-tagline">装些代码吧</h2>
+      <h2 class="project-tagline">大白菜就是你，你就是小白菜~</h2>
       <a href="https://github.com/oohook/www" class="btn">View on GitHub</a>
       <a href="https://github.com/oohook/www/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/oohook/www/tarball/master" class="btn">Download .tar.gz</a>
